# reddit-finance-cl

./: .gitignore  CLAUDE.md  Makefile  README.md  config.example.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run.py
src/main/: __init__.py  analyzer.py  config.py  core.py  logger.py  models.py  pipeline.py  processor.py  scraper.py  storage.py
tests/: conftest.py  test_core.py
